[package]
name = "rfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
lazy_static = "1.4.0"
mut_static = "5.0.0"
fuse = { git = "https://github.com/zargony/fuse-rs" }
libc = "0.2.137"
env_logger = "0.9.3"
execute = "0.2.11"
clap = { version = "4.0.26", features = ["cargo"] }
anyhow = "1.0.66"
fork = "0.1.20"
nix = "0.25.0"
retry = "2.0.0"
disk_driver = { path = "disk_driver" }

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

[[bin]]
name = "rfs_run"
path = "src/main.rs"
